# Kraken

./: .gitignore  CMakeLists.txt  README.md  setup.py  test.py
cmake/: configor.cmake  eigen.cmake  gflags.cmake  googletest.cmake  libcuckoo.cmake  libzmq.cmake  parallel_hashmap.cmake  pybind11.cmake  snappy.cmake
examples/DeepFM/: main.py
examples/DeepFM/data/: dataset.py
examples/DeepFM/model/: DeepFM.py
examples/Mnist/kraken/: main.py
examples/Mnist/pytorch/: main.py
examples/WideAndDeep/: data_utils.py  main.py
examples/WideAndDeep_Combine/: main.py  model.py
examples/WideAndDeep_pytorch/: main.py  model.py
examples/wide_deep/: README.md  main.py  model.py
kraken/checkpoint/: checkpoint.cc  checkpoint.h  checkpoint_exec.cc  checkpoint_exec.h  file_reader.cc  file_writer.cc
kraken/common/: async_task_queue.cc  async_task_queue.h  compress.h  consistent_hasher.cc  consistent_hasher.h  cost_helper.h  deserialize.h  device.cc  device.h  element_type.h  error_code.h  exception.h  info.h  ireader.h  iwriter.h  log.cc  log.h  math.cc  math.h  mem_buffer.cc  mem_buffer.h  mem_reader.cc  mem_reader.h  mutable_buffer.cc  mutable_buffer.h  parallel_skip_list.h  router.cc  router.h  serialize.h  shape.cc  shape.h  skip_list.h  snappy.cc  snappy.h  spin_locker.cc  spin_locker.h  tensor.cc  tensor.h  tensor_method.cc  tensor_storage.cc  (+6 more)
kraken/executable/: caller_test_main.cc  kraken_server_main.cc  ps_server_main.cc  scheduler_server_main.cc  server_test_main.cc
kraken/io/: check_point.cc  check_point.h  checkpoint.cc  checkpoint.h  checkpoint_executor.cc  checkpoint_executor.h  file_reader.cc  file_reader.h  file_writer.cc  file_writer.h  saver.cc  saver.h
kraken/protocol/: apply_dense_table_prot.h  apply_model_id_prot.h  apply_model_prot.h  apply_sparse_table_prot.h  apply_table_id_prot.h  apply_table_prot.h  combine_pull_dense_table_prot.h  combine_pull_sparse_table_prot.h  combine_push_sparse_table_prot.h  create_dense_table_prot.h  create_model_prot.h  create_sparse_table_prot.h  fetch_model_meta_data_prot.h  fetch_router_prot.h  heartbeat_prot.h  init_model_prot.h  is_all_ps_working_prot.h  notify_finish_transfer_prot.h  notify_load_model_prot.h  notify_node_join_prot.h  notify_router_change_prot.h  notify_save_model_prot.h  pull_dense_table_prot.h  pull_list_dense_table_prot.h  pull_sparse_table_prot.h  push_dense_table_prot.h  push_pull_dense_table_prot.h  push_sparse_table_prot.h  register_dense_table_info_prot.h  register_dense_table_prot.h  register_model_prot.h  register_sparse_table_info_prot.h  register_sparse_table_prot.h  rpc_func_type.h  save_check_point_prot.h  transfer_dense_table_prot.h  transfer_sparse_meta_data_prot.h  transfer_sparse_values_prot.h  try_combine_fetch_dense_table_prot.h  try_fetch_dense_table_prot.h  (+5 more)
kraken/ps/: apply_manager.cc  apply_manager.h  dense_table.cc  dense_table.h  info.h  model.cc  model.h  model_id_manager.cc  model_id_manager.h  model_manager.cc  model_manager.h  optim.h  proxy.cc  proxy.h  ps.cc  ps.h  ps_op.cc  ps_server.cc  ps_server.h  sgd_optim.cc  sgd_optim.h  sparse_table.cc  sparse_table.h  table.cc  table.h  transfer.cc  transfer.h
kraken/ps/initializer/: constant_initializer.cc  constant_initializer.h  initializer.cc  initializer.h  normal_initializer.cc  normal_initializer.h  uniform_initializer.cc  uniform_initializer.h  xavier_normal_initializer.cc  xavier_normal_initializer.h  xavier_uniform_initializer.cc  xavier_uniform_initializer.h
kraken/ps/optim/: adagrad.cc  adagrad.h  adam.cc  adam.h  optim.cc  optim.h  rmsprop.cc  rmsprop.h  sgd.cc  sgd.h
kraken/pybind11/: py.cc  pytorch.cc  pytorch.h  pytorch_utils.cc
kraken/pytorch/: __init__.py  combine_embedding.py  combine_jagged_embedding.py  combine_sparse_table.py  embedding.py  initializer.py  jagged_embedding.py  jagged_embedding_funcs.py  jagged_tensor.py  lr.py  optim.py  optimizer.py  sparse_table.py
kraken/pytorch/py/: jagged_ops.cc  jagged_ops.h  py.cc  pytorch.cc  pytorch.h  pytorch_utils.cc  pytorch_utils.h
kraken/rpc/: caller.cc  caller.h  combine_connecter.cc  combine_connecter.h  connecter.h  deserialize.h  group_connecter.cc  group_connecters.h  ibuffer.h  indep_connecter.cc  indep_connecter.h  protocol.h  serialize.h  server.cc  server.h  simple_station.cc  simple_station.h  station.cc  station.h  sync_station.cc  sync_station.h
kraken/scheduler/: scheduler.cc  scheduler.h  scheduler_server.cc  scheduler_server.h
kraken/t/: coo_tensor_impl.cc  coo_tensor_impl.h  device.cc  device.h  layout.h  math.cc  math.h  shape.cc  storage.cc  storage.h  tensor.cc  tensor.h  tensor_impl.cc  tensor_impl.h
kraken/test/: kraken_test_main.cc  utils_test.h
kraken/test/common/: consistent_hasher_test.cc  serialize_deserialize_test.cc  slip_list_test.cc  snappy_test.cc  thread_barrier_test.cc  utils_test.cc
kraken/test/pytorch/: jagged_embedding_funcs_test.py  jagged_tensor_test.py  main_test.py
kraken/test/rpc/: serialize_deserialize_test.cc
kraken/test/t/: math_test.cc
kraken/test/worker/: emitter_test.cc
kraken/watch/: py.cc  watcher.cc  watcher.h
kraken/worker/: client.cc  client.h  dct_emitter.cc  dct_emitter.h  emitter.cc  emitter.h  worker.cc  worker.h
wiki/: add_ps.md  command.md
